[tool.poetry]
name = "openbb-currency"
version = "1.3.2"
description = "Currency extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_currency" }]

[tool.poetry.dependencies]
python = "^3.9"
openbb-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
currency = "openbb_currency.currency_router:router"

[tool.poetry.plugins."openbb_charting_extension"]
currency = "openbb_currency.currency_views:CurrencyViews"
