[tool.poetry]
name = "openbb-derivatives"
version = "1.0.0b2"
description = "Derivatives extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_derivatives" }]

[tool.poetry.dependencies]
python = "^3.8"
openbb-core = "^1.0.0b2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
derivatives = "openbb_derivatives.derivatives_router:router"
