[tool.poetry]
name = "openbb-derivatives"
version = "1.3.5"
description = "Derivatives extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_derivatives" }]

[tool.poetry.dependencies]
python = "^3.9"
openbb-core = "^1.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
derivatives = "openbb_derivatives.derivatives_router:router"

[tool.poetry.plugins."openbb_charting_extension"]
derivatives = "openbb_derivatives.derivatives_views:DerivativesViews"
