[tool.poetry]
name = "openbb-devtools"
version = "1.3.1"
description = "Tools for OpenBB Platform Developers"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_devtools" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"              # scipy forces <4.0 explicitly
ruff = "^0.4.4"
pylint = "^3.0.2"
mypy = "^1.6.1"
pydocstyle = "^6.3.0"
black = "^24.4.2"
bandit = "^1.7.5"
codespell = "^2.2.5"
pre-commit = "^3.5.0"
tox = "^4.11.3"
pytest = "^7.4.3"
pytest-subtests = "^0.11.0"
pytest-recorder = "^0.3.0"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
ipykernel = "^6.29.4"
types-python-dateutil = "^2.8.19.14"
types-toml = "^0.10.8.7"
poetry = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
