[tool.poetry]
name = "openbb-econometrics"
version = "1.0.0"
description = "Econometrics Toolkit for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_econometrics" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"                 # scipy forces python <4.0 explicitly
scipy = "^1.10.1"
statsmodels = "^0.14.0"
arch = "^5.5.0"
linearmodels = "<=4.25"                # ^4.26 has setuptools-scm in setup_requires
openbb-core = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
econometrics = "openbb_econometrics.econometrics_router:router"
