[tool.poetry]
name = "openbb-economy"
version = "1.2.2"
description = "Economy extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_economy" }]

[tool.poetry.dependencies]
python = "^3.8"
openbb-core = "^1.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
economy = "openbb_economy.economy_router:router"
