[tool.poetry]
name = "openbb-economy"
version = "1.3.2"
description = "Economy extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_economy" }]

[tool.poetry.dependencies]
python = "^3.9"
openbb-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
economy = "openbb_economy.economy_router:router"

[tool.poetry.plugins."openbb_charting_extension"]
economy = "openbb_economy.economy_views:EconomyViews"
