[tool.poetry]
name = "openbb-etf"
version = "1.3.2"
description = "ETF extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_etf" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openbb-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
etf = "openbb_etf.etf_router:router"

[tool.poetry.plugins."openbb_charting_extension"]
etf = "openbb_etf.etf_views:EtfViews"
