[tool.poetry]
name = "openbb-fixedincome"
version = "1.2.0"
description = "Fixed income extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_fixedincome" }]

[tool.poetry.dependencies]
python = "^3.8"
openbb-core = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
fixedincome = "openbb_fixedincome.fixedincome_router:router"
