[tool.poetry]
name = "openbb-fixedincome"
version = "1.3.3"
description = "Fixed income extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_fixedincome" }]

[tool.poetry.dependencies]
python = "^3.9"
openbb-core = "^1.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
fixedincome = "openbb_fixedincome.fixedincome_router:router"

[tool.poetry.plugins."openbb_charting_extension"]
fixedincome = "openbb_fixedincome.fixedincome_views:FixedIncomeViews"
