[tool.poetry]
name = "openbb-futures"
version = "1.0.0b0"
description = "Futures extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_futures" }]

[tool.poetry.dependencies]
python = "^3.8"
openbb-core = "^1.0.0b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
futures = "openbb_futures.futures_router:router"
