[tool.poetry]
name = "openbb-index"
version = "1.0.0"
description = "Index extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_index" }]

[tool.poetry.dependencies]
python = "^3.8"
openbb-core = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
index = "openbb_index.index_router:router"
