[tool.poetry]
name = "openbb-news"
version = "1.3.2"
description = "News extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_news" }]

[tool.poetry.dependencies]
python = "^3.9"
openbb-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
news = "openbb_news.news_router:router"
