[tool.poetry]
name = "openbb-platform-api"
version = "1.1.5"
description = "OpenBB Platform API: Launch script and widgets builder for the OpenBB Platform API and Workspace Backend Connector."
authors = ["OpenBB <hello@openbb.co>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://openbb.co"
repository = "https://github.com/openbb-finance/openbb"
documentation = "https://docs.openbb.co"
packages = [{ include = "openbb_platform_api" }]

[tool.poetry.scripts]
openbb-api = "openbb_platform_api.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openbb-core = "^1.4.3"
deepdiff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
