[tool.poetry]
name = "openbb-regulators"
version = "1.0.0"
description = "Markets and Agency Regulators extension for OpenBB"
authors = ["OpenBB Team <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_regulators" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
openbb-core = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
regulators = "openbb_regulators.regulators_router:router"
